Path fix. Re #1169.

--- a/Code/Mantid/API/.cproject
+++ b/Code/Mantid/API/.cproject
@@ -55,7 +55,7 @@
 <listOptionValue builtIn="false" value="gomp"/>
 </option>
 <option id="gnu.cpp.link.option.paths.562638393" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1448735553" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -543,7 +543,7 @@
 <listOptionValue builtIn="false" value="gomp"/>
 </option>
 <option id="gnu.cpp.link.option.paths.1799304643" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/release}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.346411332" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
