--- a/Code/Mantid/DataHandling/.cproject
+++ b/Code/Mantid/DataHandling/.cproject
@@ -57,7 +57,7 @@
 <listOptionValue builtIn="false" value="MantidDataObjects"/>
 </option>
 <option id="gnu.cpp.link.option.paths.2056530203" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.320744326" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -546,7 +546,7 @@
 <listOptionValue builtIn="false" value="MantidDataObjects"/>
 </option>
 <option id="gnu.cpp.link.option.paths.2126570815" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1772107821" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
