--- a/Code/Mantid/Main/.project
+++ b/Code/Mantid/Main/.project
@@ -39,7 +39,7 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/Main/Release}</value>
+					<value>${workspace_loc:/Main/Debug}</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
