--- a/Code/Mantid/MatlabAPI/.cproject
+++ b/Code/Mantid/MatlabAPI/.cproject
@@ -53,7 +53,7 @@
 <listOptionValue builtIn="false" value="MantidAPI"/>
 </option>
 <option id="gnu.cpp.link.option.paths.912124760" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1890346885" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -536,7 +536,7 @@
 <listOptionValue builtIn="false" value="MantidAPI"/>
 </option>
 <option id="gnu.cpp.link.option.paths.358624487" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/release}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.2133206769" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
