--- a/Code/Mantid/Nexus/.cproject
+++ b/Code/Mantid/Nexus/.cproject
@@ -59,7 +59,7 @@
 <listOptionValue builtIn="false" value="boost_date_time"/>
 </option>
 <option id="gnu.cpp.link.option.paths.921648912" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1158678767" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -549,7 +549,7 @@
 <listOptionValue builtIn="false" value="boost_date_time"/>
 </option>
 <option id="gnu.cpp.link.option.paths.920464239" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/release}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.247089816" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
