--- a/Code/Mantid/Algorithms/.cproject
+++ b/Code/Mantid/Algorithms/.cproject
@@ -58,7 +58,7 @@
 <listOptionValue builtIn="false" value="MantidDataObjects"/>
 </option>
 <option id="gnu.cpp.link.option.paths.722719859" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/debug}&quot;"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1126003424" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -547,7 +547,7 @@
 <listOptionValue builtIn="false" value="MantidDataObjects"/>
 </option>
 <option id="gnu.cpp.link.option.paths.70231710" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/release}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1730208139" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
