--- a/Code/Mantid/UserAlgorithms/.cproject
+++ b/Code/Mantid/UserAlgorithms/.cproject
@@ -55,7 +55,8 @@
 <listOptionValue builtIn="false" value="MantidAPI"/>
 </option>
 <option id="gnu.cpp.link.option.paths.531873773" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-<listOptionValue builtIn="false" value="&quot;${workspace_loc:/release}&quot;"/>
+<listOptionValue builtIn="false" value="../../release"/>
+<listOptionValue builtIn="false" value="../../debug"/>
 </option>
 <inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.1874409328" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 <additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
