--- a/Code/RPM_Kit/mantid.spec.template
+++ b/Code/RPM_Kit/mantid.spec.template
@@ -53,6 +53,7 @@ Requires:	muParser
 %define mantidincludesdir	%{mantiddir}/include
 %define mantidimagesdir		%{mantiddir}/images
 %define mantidinstrumentdir	%{mantiddir}/instrument
+%define mantidpythonalgdir	%{mantiddir}/PythonAlgorithms
 %define pythonsitepackages	PYTHON_SITEPACKAGES
 
 %description
@@ -92,6 +93,7 @@ mkdir -p $RPM_BUILD_ROOT/%{mantidscriptsdir}
 mkdir -p $RPM_BUILD_ROOT/%{mantidimagesdir}
 mkdir -p $RPM_BUILD_ROOT/%{mantidinstrumentdir}
 mkdir -p $RPM_BUILD_ROOT/%{mantidincludesdir}
+mkdir -p $RPM_BUILD_ROOT/%{mantidpythonalgdir}
 mkdir -p $RPM_BUILD_ROOT/etc/ld.so.conf.d
 mkdir -p $RPM_BUILD_ROOT/etc/profile.d
 install -m755 Code/qtiplot/MantidQt/lib/libMantidWidgets.so $RPM_BUILD_ROOT/%{mantidlibdir}
@@ -154,6 +156,8 @@ if test `whoami` = root; then ldconfig; fi
 if test `whoami` = root; then ldconfig; fi
 
 %changelog
+* Mon Apr 07 2010 Freddie Akeroyd <freddie.akeroyd@stfc.ac.uk> - 1.0.2
+- Create PythonAlgorithms directory
 * Mon Mar 30 2009 Freddie Akeroyd <freddie.akeroyd@stfc.ac.uk> - 1.0.1
 - Reorder build system, add changelog and move to mantid.spec.template
 - Fix dependencies and build issues with Qt and OpenCASCADE
