Added FitMultispectral algorithm. re #1200

--- a/Code/Mantid/CurveFitting/CurveFitting.vcproj
+++ b/Code/Mantid/CurveFitting/CurveFitting.vcproj
@@ -223,6 +223,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\FitMultispectral.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\FRConjugateGradientMinimizer.cpp"
 				>
 			</File>
@@ -350,6 +354,10 @@
 			</File>
 			<File
 				RelativePath=".\inc\MantidCurveFitting\Fit1D.h"
+				>
+			</File>
+			<File
+				RelativePath=".\inc\MantidCurveFitting\FitMultispectral.h"
 				>
 			</File>
 			<File
